--- a/public/css/style.css
+++ b/public/css/style.css
@@ -468,7 +468,7 @@ a {
 body {
   width: 100%;
   min-width: 340px;
-  height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0 auto;
   font-family: Trebuchet MS, Arial, sans-serif;
@@ -479,9 +479,9 @@ body {
   background-repeat: repeat;
   background-position: 0 0;
   position: relative;
-/*  display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center;*/
+  justify-content: center;
 }
 
 body::before {
@@ -496,24 +496,23 @@ body::before {
   z-index: -1;
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 1200px) {
   body {
-    height: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    height: 100vh;
   }
 }
 
 .catalog {
   width: inherit;
-  max-width: 1120px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   min-width: inherit;
-  height: 200px;
+  max-width: 1300px;
   margin: 0 auto;
-  background-color: red;
+  background-color: #666;
 }
 
-/*.catalog__title {
+.catalog__title {
   font-size: 36px;
   line-height: 36px;
   font-family: Exo, Arial, sans-serif;;
@@ -521,53 +520,81 @@ body::before {
   text-align: center;
   margin-top: 0;
   margin-bottom: 25px;
-}*/
+}
 
 .catalog__list {
   list-style: none;
   margin: 0 auto;
   padding: 0;
-/*  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;*/
+  width: inherit;
 }
 
-/*.catalog__item {
+.catalog__item {
   width: 100%;
   max-width: 320px;
-  max-height: 480px;
+  max-height: 513px;
+  margin: 0 auto 50px;
+  background-color: #1698d9;
+}
+
+.catalog__item--selected {
+  background-color: #d91667;
+}
+
+.catalog__item--disabled {
+  background-color: #b3b3b3;
 }
 
 .catalog__link {
   color: #666666;
+  background-color: #f2f2f2;
+  height: 480px;
   margin-bottom: 15px;
   display: block;
   cursor: pointer;
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 720px) {
   .catalog__list {
     max-width: 720px;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
   }
 
   .catalog__item {
-    margin-bottom: 50px;
+    width: 320px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .catalog__item:first-child {
-    margin-right: 6.25%;
+    margin-right: 6.25%;;
   }
 }
 
-@media (max-width: 720px) {
+@media (min-width: 1200px) {
+  .catalog {
+    padding-top: 48px;
+    padding-bottom: 64px;
+  }
   .catalog__list {
-    max-width: 719px;
-    display: block;
+    max-width: 1120px;
   }
 
-  .catalog__item,
-  .catalog__item:first-child {
-    margin: 0 auto 50px;
+  .catalog__item {
+    margin-right: 6.25%;
+    margin-bottom: 0;
   }
-}*/
+
+  .catalog__item:last-child {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 1300px) {
+  .catalog {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
