--- a/source/css/global.css
+++ b/source/css/global.css
@@ -13,7 +13,7 @@ a {
 body {
   width: 100%;
   min-width: 340px;
-  height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0 auto;
   font-family: Trebuchet MS, Arial, sans-serif;
@@ -24,9 +24,9 @@ body {
   background-repeat: repeat;
   background-position: 0 0;
   position: relative;
-/*  display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center;*/
+  justify-content: center;
 }
 
 body::before {
@@ -41,10 +41,8 @@ body::before {
   z-index: -1;
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 1200px) {
   body {
-    height: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    height: 100vh;
   }
 }
