--- a/public/css/style.css
+++ b/public/css/style.css
@@ -509,7 +509,6 @@ body::before {
   min-width: inherit;
   max-width: 1300px;
   margin: 0 auto;
-  background-color: #666;
 }
 
 .catalog__title {
@@ -519,7 +518,7 @@ body::before {
   color: #ffffff;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 }
 
 .catalog__list {
@@ -529,33 +528,73 @@ body::before {
 .catalog__item {
   width: 100%;
   max-width: 320px;
-  max-height: 513px;
+  min-height: 513px;
   margin: 0 auto 50px;
+  padding-top: 4px;
+  padding-left: 4px;
+}
+
+.catalog__item-card--disabled {
+  pointer-events: none;
 }
 
 .catalog__item-card {
-  border: 2px solid #1698d9;
+  width: 312px;
   border-radius: 10px;
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 20px;
   color: #666666;
   background-color: #f2f2f2;
-  height: 480px;
-  margin-bottom: 15px;
+  background:linear-gradient(135deg, transparent 30px, #f2f2f2 0);
+  min-height: 472px;
+  margin-bottom: 19px;
   display: block;
   cursor: pointer;
+  position: relative;
 }
 
-.catalog__item--selected .catalog__item-card {
-  border-color: #d91667;
+.catalog__item-card::before {
+  content: '';
+  width: 320px;
+  min-height: 480px;
+  height: calc(100% + 6px);
+  z-index: -1;
+  border-radius: 10px;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  background-color: #1698d9;
+  background:linear-gradient(135deg, transparent 31px, #1698d9 0);
 }
 
-.catalog__item--disabled .catalog__item-card {
-  border-color: #b3b3b3;
+.catalog__item-card--selected::before {
+  background-color: #d91667;
+  background:linear-gradient(135deg, transparent 31px, #d91667 0);
+}
+
+.catalog__item-card--disabled::before {
+  background-color: #b3b3b3;
+  background:linear-gradient(135deg, transparent 31px, #b3b3b3 0);
+}
+
+.catalog__item-card:hover::before,
+.catalog__item-card:focus::before {
+  background-color: #2ea8e6;
+  background:linear-gradient(135deg, transparent 31px, #2ea8e6 0);
+}
+
+.catalog__item-card--selected:hover::before,
+.catalog__item-card--selected:focus::before {
+  background-color: #e62e7a;
+  background:linear-gradient(135deg, transparent 31px, #e62e7a 0);
 }
 
 .catalog__item-note {
   font-size: 13px;
   line-height: 13px;
   text-align: center;
+  text-shadow: -1px 2px 0px rgba(0, 0, 0, 1);
   color: #ffffff;
   margin: 0;
 }
@@ -566,15 +605,15 @@ body::before {
 
 .catalog__item .catalog__item-note--selected,
 .catalog__item .catalog__item-note--disabled,
-.catalog__item--selected .catalog__item-note--disabled,
-.catalog__item--disabled .catalog__item-note--selected,
-.catalog__item--selected .catalog__item-note,
-.catalog__item--disabled .catalog__item-note {
+.catalog__item-card--selected ~ .catalog__item-note--disabled,
+.catalog__item-card--disabled ~ .catalog__item-note--selected,
+.catalog__item-card--selected ~ .catalog__item-note,
+.catalog__item-card--disabled ~ .catalog__item-note {
   display: none;
 }
 
-.catalog__item--selected .catalog__item-note--selected,
-.catalog__item--disabled .catalog__item-note--disabled {
+.catalog__item-card--selected ~ .catalog__item-note--selected,
+.catalog__item-card--disabled ~ .catalog__item-note--disabled {
   display: block;
 }
 
@@ -587,6 +626,7 @@ body::before {
   color: #1698d9;
   font-weight: bold;
   border-bottom: 1px dashed #1698d9;
+  text-shadow: -1px 2px 0px rgba(0, 0, 0, 1);
   cursor: pointer;
 }
 
@@ -612,19 +652,121 @@ body::before {
 
 @media (min-width: 1200px) {
   .catalog {
-    padding-top: 48px;
-    padding-bottom: 64px;
+    padding: 0;
   }
+
   .catalog__list {
     max-width: 1120px;
   }
 
-  .catalog__item {
-    margin-right: 6.25%;
+  .catalog__item,
+  .catalog__item:first-child {
+    margin-right: 80px;
     margin-bottom: 0;
   }
 
   .catalog__item:last-child {
     margin-right: 0;
   }
+}
+
+.card-product {
+  position: relative;
+}
+
+.card-product__note {
+  margin-top: 0;
+  margin-bottom: 19px;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.card-product__note--focus {
+  color: #e52e7a;
+  display: none;
+}
+
+.card-product__title {
+  font-size: 48px;
+  line-height: 31px;
+  font-weight: bold;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.card-product__title span {
+  font-size: 24px;
+}
+
+.card-product__bonus {
+  list-style: none;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 18px;
+  min-height: 49px;
+}
+
+.card-product__image {
+  display: block;
+  border-bottom-left-radius: 10px;
+  margin-left: -45px;
+}
+
+.card-product__weight {
+  font-size: 42px;
+  line-height: 21px;
+  font-weight: normal;
+  text-align: center;
+  color: #ffffff;
+  background-color: #1698d9;
+  border-radius: 50%;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 81px;
+  height: 81px;
+  padding: 23px 5px;
+  position: absolute;
+  bottom: 11px;
+  right: 11px;
+}
+
+.card-product__weight span {
+  font-size: 21px;
+  line-height: 21px;
+  display: inline-flex;
+}
+
+.catalog__item-card--disabled .card-product__note,
+.catalog__item-card--disabled .card-product__title,
+.catalog__item-card--disabled .card-product__bonus  {
+  color: #b3b3b3;
+}
+
+.catalog__item-card--disabled .card-product__weight {
+  background-color: #b3b3b3;
+}
+
+.catalog__item-card--selected .card-product__weight {
+  background-color: #d91667;
+}
+
+.catalog__item-card--selected:hover .card-product__note,
+.catalog__item-card--selected:focus .card-product__note {
+  display: none;
+}
+
+.catalog__item-card--selected:hover .card-product__note--focus,
+.catalog__item-card--selected:focus .card-product__note--focus {
+  display: block;
+}
+
+.catalog__item-card:hover .card-product__weight,
+.catalog__item-card:focus .card-product__weight {
+  background-color: #2ea8e6;
+}
+
+.catalog__item-card--selected:hover .card-product__weight,
+.catalog__item-card--selected:focus .card-product__weight {
+  background-color: #e62e7a;
 }
