--- a/source/css/catalog.css
+++ b/source/css/catalog.css
@@ -5,7 +5,6 @@
   min-width: inherit;
   max-width: 1300px;
   margin: 0 auto;
-  background-color: #666;
 }
 
 .catalog__title {
@@ -15,7 +14,7 @@
   color: #ffffff;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 27px;
 }
 
 .catalog__list {
@@ -25,37 +24,76 @@
 .catalog__item {
   width: 100%;
   max-width: 320px;
-  max-height: 513px;
+  min-height: 513px;
   margin: 0 auto 50px;
+  padding-top: 4px;
+  padding-left: 4px;
+}
+
+.catalog__item-card--disabled {
+  pointer-events: none;
 }
 
 .catalog__item-card {
-  border: 2px solid #1698d9;
+  width: 312px;
   border-radius: 10px;
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 20px;
   color: #666666;
   background-color: #f2f2f2;
-  height: 480px;
-  margin-bottom: 15px;
+  background:linear-gradient(135deg, transparent 30px, #f2f2f2 0);
+  min-height: 472px;
+  margin-bottom: 19px;
   display: block;
   cursor: pointer;
+  position: relative;
 }
 
-.catalog__item--selected .catalog__item-card {
-  border-color: #d91667;
+.catalog__item-card::before {
+  content: '';
+  width: 320px;
+  min-height: 480px;
+  height: calc(100% + 6px);
+  z-index: -1;
+  border-radius: 10px;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  background-color: #1698d9;
+  background:linear-gradient(135deg, transparent 31px, #1698d9 0);
 }
 
-.catalog__item--disabled .catalog__item-card {
-  border-color: #b3b3b3;
+.catalog__item-card--selected::before {
+  background-color: #d91667;
+  background:linear-gradient(135deg, transparent 31px, #d91667 0);
+}
+
+.catalog__item-card--disabled::before {
+  background-color: #b3b3b3;
+  background:linear-gradient(135deg, transparent 31px, #b3b3b3 0);
+}
+
+.catalog__item-card:hover::before,
+.catalog__item-card:focus::before {
+  background-color: #2ea8e6;
+  background:linear-gradient(135deg, transparent 31px, #2ea8e6 0);
+}
+
+.catalog__item-card--selected:hover::before,
+.catalog__item-card--selected:focus::before {
+  background-color: #e62e7a;
+  background:linear-gradient(135deg, transparent 31px, #e62e7a 0);
 }
 
 .catalog__item-note {
   font-size: 13px;
   line-height: 13px;
   text-align: center;
+  text-shadow: -1px 2px 0px rgba(0, 0, 0, 1);
   color: #ffffff;
   margin: 0;
 }
-
 
 .catalog__item-note--disabled {
   color: #ffff66;
@@ -63,15 +101,15 @@
 
 .catalog__item .catalog__item-note--selected,
 .catalog__item .catalog__item-note--disabled,
-.catalog__item--selected .catalog__item-note--disabled,
-.catalog__item--disabled .catalog__item-note--selected,
-.catalog__item--selected .catalog__item-note,
-.catalog__item--disabled .catalog__item-note {
+.catalog__item-card--selected ~ .catalog__item-note--disabled,
+.catalog__item-card--disabled ~ .catalog__item-note--selected,
+.catalog__item-card--selected ~ .catalog__item-note,
+.catalog__item-card--disabled ~ .catalog__item-note {
   display: none;
 }
 
-.catalog__item--selected .catalog__item-note--selected,
-.catalog__item--disabled .catalog__item-note--disabled {
+.catalog__item-card--selected ~ .catalog__item-note--selected,
+.catalog__item-card--disabled ~ .catalog__item-note--disabled {
   display: block;
 }
 
@@ -84,6 +122,7 @@
   color: #1698d9;
   font-weight: bold;
   border-bottom: 1px dashed #1698d9;
+  text-shadow: -1px 2px 0px rgba(0, 0, 0, 1);
   cursor: pointer;
 }
 
@@ -109,15 +148,16 @@
 
 @media (min-width: 1200px) {
   .catalog {
-    padding-top: 48px;
-    padding-bottom: 64px;
+    padding: 0;
   }
+
   .catalog__list {
     max-width: 1120px;
   }
 
-  .catalog__item {
-    margin-right: 6.25%;
+  .catalog__item,
+  .catalog__item:first-child {
+    margin-right: 80px;
     margin-bottom: 0;
   }
 
