--- a/public/css/style.css
+++ b/public/css/style.css
@@ -552,6 +552,7 @@ body::before {
   display: block;
   cursor: pointer;
   position: relative;
+  outline: none;
 }
 
 .catalog__item-card::before {
@@ -568,20 +569,22 @@ body::before {
   background:linear-gradient(135deg, transparent 31px, #1698d9 0);
 }
 
-.catalog__item-card--selected::before {
-  background-color: #d91667;
-  background:linear-gradient(135deg, transparent 31px, #d91667 0);
-}
-
-.catalog__item-card--disabled::before {
-  background-color: #b3b3b3;
-  background:linear-gradient(135deg, transparent 31px, #b3b3b3 0);
-}
-
 .catalog__item-card:hover::before,
 .catalog__item-card:focus::before {
   background-color: #2ea8e6;
   background:linear-gradient(135deg, transparent 31px, #2ea8e6 0);
+}
+
+.catalog__item-card--disabled::before,
+.catalog__item-card--disabled::before,
+.catalog__item-card--disabled:focus::before {
+  background-color: #b3b3b3;
+  background:linear-gradient(135deg, transparent 31px, #b3b3b3 0);
+}
+
+.catalog__item-card--selected::before {
+  background-color: #d91667;
+  background:linear-gradient(135deg, transparent 31px, #d91667 0);
 }
 
 .catalog__item-card--selected:hover::before,
@@ -618,7 +621,6 @@ body::before {
 }
 
 .catalog__btn-text {
-/*  outline: none;*/
   border: 0;
   background-color: transparent;
   padding: 0;
@@ -737,13 +739,19 @@ body::before {
   display: inline-flex;
 }
 
+.catalog__item-card:hover .card-product__weight,
+.catalog__item-card:focus .card-product__weight {
+  background-color: #2ea8e6;
+}
+
 .catalog__item-card--disabled .card-product__note,
 .catalog__item-card--disabled .card-product__title,
 .catalog__item-card--disabled .card-product__bonus  {
   color: #b3b3b3;
 }
 
-.catalog__item-card--disabled .card-product__weight {
+.catalog__item-card--disabled .card-product__weight,
+.catalog__item-card--disabled:focus .card-product__weight {
   background-color: #b3b3b3;
 }
 
@@ -759,11 +767,6 @@ body::before {
 .catalog__item-card--selected:hover .card-product__note--focus,
 .catalog__item-card--selected:focus .card-product__note--focus {
   display: block;
-}
-
-.catalog__item-card:hover .card-product__weight,
-.catalog__item-card:focus .card-product__weight {
-  background-color: #2ea8e6;
 }
 
 .catalog__item-card--selected:hover .card-product__weight,
